--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,9 +13,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Go fmt
-          uses: actions/setup-go@v2
-            with:
-              go-version: '^1.14'
+        uses: actions/setup-go@v2
+          with:
+            go-version: '^1.14'
           run: |
             gofmt -l
       - name: Build project
@@ -33,7 +33,7 @@ jobs:
 
           echo "C_VERSION=$(bin/cardtage_cardtage_linux_amd64 version)" >> $GITHUB_ENV
           echo "cardtage version $C_VERSION successfully built"
-      name: Create Tag
+      - name: Create Tag
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
