--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,16 +12,14 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Go fmt
+      - name: Setup Go
         uses: actions/setup-go@v2
         with:
           go-version: '^1.14'
+      - name: Go fmt
         run: |
           gofmt -l
       - name: Build project
-        uses: actions/setup-go@v2
-        with:
-          go-version: '^1.14'
         run: |
           ldFlags="-X github.com/bamItsCam/cardtage/internal/version.Patch=$GITHUB_RUN_NUMBER"
           GOARCH=386 GOOS=darwin go build -ldflags "$ldFlags" -v -o bin/cardtage_darwin_386
