--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Install MagickWand libraries
         run: |
           sudo apt-get install -y libmagickwand-dev
+      - name: Go mod download
+        run: |
+          go mod download
       - name: Build project
         run: |
           ldFlags="-X github.com/bamItsCam/cardtage/internal/version.Patch=$GITHUB_RUN_NUMBER"
